// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema (de)serialization on a grid-less form (golden) > deserializeFormSchema output 1`] = `
{
  "isShuffleEnabled": false,
  "layout": {
    "backgroundImageKey": "bg/key.png",
    "code": "L1",
    "content": "<p>Hi</p>",
    "customBackGroundColor": "#ffffff",
    "spacing": "normal",
    "textColor": "#111111",
    "theme": "light",
  },
  "pages": [
    {
      "fields": [
        TextInputField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "Full name",
          "id": "f-text",
          "label": "Name",
          "placeholder": "Jane",
          "prefix": "Mr",
          "suffix": undefined,
          "type": "text_input_field",
          "validation": TextFieldValidation {
            "maxLength": 40,
            "minLength": 2,
            "required": true,
            "type": "text_field_validation",
          },
        },
        TextAreaField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-area",
          "label": "Bio",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "text_area_field",
          "validation": TextFieldValidation {
            "maxLength": 500,
            "minLength": undefined,
            "required": false,
            "type": "text_field_validation",
          },
        },
        EmailField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-email",
          "label": "Email",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "email_field",
          "validation": FillableFormFieldValidation {
            "required": true,
            "type": "fillable_form_field",
          },
        },
        PhoneNumberField {
          "defaultCountry": "IN",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-phone",
          "label": "Phone",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "phone_number_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        NumberField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-number",
          "label": "Age",
          "max": 120,
          "min": 1,
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "number_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        DateField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-date",
          "label": "Birthday",
          "maxDate": "2100-01-01",
          "minDate": "1900-01-01",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "date_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        TextInputField {
          "defaultValue": "",
          "deleted": true,
          "grading": undefined,
          "hint": "",
          "id": "f-gone",
          "label": "Removed",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "text_input_field",
          "validation": TextFieldValidation {
            "maxLength": undefined,
            "minLength": undefined,
            "required": false,
            "type": "text_field_validation",
          },
        },
        RichTextFormField {
          "content": "<p>Welcome</p>",
          "deleted": undefined,
          "id": "f-rich",
          "type": "rich_text_field",
        },
      ],
      "id": "page-1",
      "order": 0,
      "showPageName": true,
      "title": "About you",
    },
    {
      "fields": [
        SelectField {
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-select",
          "label": "Country",
          "options": [
            "IN",
            "US",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "select_field",
          "validation": FillableFormFieldValidation {
            "required": true,
            "type": "fillable_form_field",
          },
        },
        RadioField {
          "defaultValue": "M",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-radio",
          "label": "Size",
          "options": [
            "S",
            "M",
            "L",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "radio_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        CheckboxField {
          "defaultValue": "",
          "defaultValues": [
            "Red",
          ],
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-check",
          "label": "Colours",
          "options": [
            "Red",
            "Blue",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "checkbox_field",
          "validation": CheckboxFieldValidation {
            "maxSelections": 2,
            "minSelections": 1,
            "required": false,
            "type": "checkbox_field_validation",
          },
        },
        FileUploadField {
          "allowedMimeTypes": [
            "application/pdf",
          ],
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "PDF only",
          "id": "f-file",
          "label": "Resume",
          "maxFileSizeMb": 5,
          "maxFiles": 2,
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "file_upload_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
      ],
      "id": "page-2",
      "order": 1,
      "showPageName": false,
      "title": "Preferences",
    },
  ],
}
`;

exports[`schema (de)serialization on a grid-less form (golden) > serializeFormSchema(deserializeFormSchema(x)) output 1`] = `
{
  "isShuffleEnabled": false,
  "layout": {
    "backgroundImageKey": "bg/key.png",
    "code": "L1",
    "content": "<p>Hi</p>",
    "customBackGroundColor": "#ffffff",
    "spacing": "normal",
    "textColor": "#111111",
    "theme": "light",
  },
  "pages": [
    {
      "fields": [
        {
          "__type": "text_input_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "Full name",
          "id": "f-text",
          "label": "Name",
          "placeholder": "Jane",
          "prefix": "Mr",
          "suffix": undefined,
          "type": "text_input_field",
          "validation": TextFieldValidation {
            "maxLength": 40,
            "minLength": 2,
            "required": true,
            "type": "text_field_validation",
          },
        },
        {
          "__type": "text_area_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-area",
          "label": "Bio",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "text_area_field",
          "validation": TextFieldValidation {
            "maxLength": 500,
            "minLength": undefined,
            "required": false,
            "type": "text_field_validation",
          },
        },
        {
          "__type": "email_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-email",
          "label": "Email",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "email_field",
          "validation": FillableFormFieldValidation {
            "required": true,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "phone_number_field",
          "defaultCountry": "IN",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-phone",
          "label": "Phone",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "phone_number_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "number_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-number",
          "label": "Age",
          "max": 120,
          "min": 1,
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "number_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "date_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-date",
          "label": "Birthday",
          "maxDate": "2100-01-01",
          "minDate": "1900-01-01",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "date_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "text_input_field",
          "defaultValue": "",
          "deleted": true,
          "grading": undefined,
          "hint": "",
          "id": "f-gone",
          "label": "Removed",
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "text_input_field",
          "validation": TextFieldValidation {
            "maxLength": undefined,
            "minLength": undefined,
            "required": false,
            "type": "text_field_validation",
          },
        },
        {
          "__type": "rich_text_field",
          "content": "<p>Welcome</p>",
          "deleted": undefined,
          "id": "f-rich",
          "type": "rich_text_field",
        },
      ],
      "id": "page-1",
      "order": 0,
      "showPageName": true,
      "title": "About you",
    },
    {
      "fields": [
        {
          "__type": "select_field",
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-select",
          "label": "Country",
          "options": [
            "IN",
            "US",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "select_field",
          "validation": FillableFormFieldValidation {
            "required": true,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "radio_field",
          "defaultValue": "M",
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-radio",
          "label": "Size",
          "options": [
            "S",
            "M",
            "L",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "radio_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
        {
          "__type": "checkbox_field",
          "defaultValue": "",
          "defaultValues": [
            "Red",
          ],
          "deleted": undefined,
          "grading": undefined,
          "hint": "",
          "id": "f-check",
          "label": "Colours",
          "options": [
            "Red",
            "Blue",
          ],
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "checkbox_field",
          "validation": CheckboxFieldValidation {
            "maxSelections": 2,
            "minSelections": 1,
            "required": false,
            "type": "checkbox_field_validation",
          },
        },
        {
          "__type": "file_upload_field",
          "allowedMimeTypes": [
            "application/pdf",
          ],
          "defaultValue": "",
          "deleted": undefined,
          "grading": undefined,
          "hint": "PDF only",
          "id": "f-file",
          "label": "Resume",
          "maxFileSizeMb": 5,
          "maxFiles": 2,
          "placeholder": "",
          "prefix": "",
          "suffix": undefined,
          "type": "file_upload_field",
          "validation": FillableFormFieldValidation {
            "required": false,
            "type": "fillable_form_field",
          },
        },
      ],
      "id": "page-2",
      "order": 1,
      "showPageName": false,
      "title": "Preferences",
    },
  ],
}
`;
